AddSpace adding upload image